Fix [Monitor Workflows] Missing padding in graph view details panel

--- a/src/components/Workflow/workflow.scss
+++ b/src/components/Workflow/workflow.scss
@@ -20,4 +20,8 @@
       }
     }
   }
+
+  .table__content {
+    display: flex;
+  }
 }
